# ChangeLog for x11-misc/xfractint
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfractint/ChangeLog,v 1.26 2004/07/15 14:59:12 gustavoz Exp $

  15 Jul 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  xfractint-20.3.01.ebuild:
  Stable on sparc

  03 Jul 2004; Michal Januszewski <spock@gentoo.org> xfractint-20.2.05.ebuild,
  xfractint-20.3.00.ebuild, xfractint-20.3.01.ebuild,
  xfractint-20.3.02.ebuild:
  Fixed MAKEOPTS override.

  28 Jun 2004; Aron Griffis <agriffis@gentoo.org> xfractint-20.2.04.ebuild,
  xfractint-20.2.05.ebuild, xfractint-20.3.00.ebuild,
  xfractint-20.3.01.ebuild, xfractint-20.3.02.ebuild:
  glibc -> libc

  21 Jun 2004; Michal Januszewski <spock@gentoo.org> xfractint-20.3.01.ebuild:
  Stable on x86.

*xfractint-20.3.02 (21 Jun 2004)

  21 Jun 2004; Michal Januszewski <spock@gentoo.org>
  +xfractint-20.3.02.ebuild:
  Version bump.

  21 Jun 2004; Frank van de Pol <fvdpol@gentoo.org> xfractint-20.3.01.ebuild:
  Added ~amd64 keyword.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> xfractint-20.2.04.ebuild,
  xfractint-20.2.05.ebuild, xfractint-20.3.00.ebuild,
  xfractint-20.3.01.ebuild:
  Add flag-o-matic for bug 49179

  27 Apr 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  xfractint-20.3.00.ebuild:
  Stable on sparc

  26 Apr 2004; David Holm <dholm@gentoo.org> xfractint-20.3.01.ebuild:
  Added to ~ppc.

  25 Apr 2004; Michal Januszewski <spock@gentoo.org> xfractint-20.3.00.ebuild:
  Stable on x86.

  25 Apr 2004; Michal Januszewski <spock@gentoo.org> xfractint-20.2.04.ebuild,
  xfractint-20.2.05.ebuild, xfractint-20.3.00.ebuild,
  xfractint-20.3.01.ebuild:
  Added a replace-flags line for -funroll-all-loops. Closes bug #48923.

*xfractint-20.3.01 (25 Apr 2004)

  25 Apr 2004; Michal Januszewski <spock@gentoo.org>
  +files/xfractint-20.03p01-make.patch, +xfractint-20.3.01.ebuild:
  Version bump.

  25 Apr 2004; Michal Januszewski <spock@gentoo.org> xfractint-20.3.00.ebuild: