@@ -1,16 +1,20 @@
-MD5 8927f455de020c884c3a33f5d9e85059 xfractint-20.3.02.ebuild 1327
-MD5 e362ccf5d24ad450734a738025e9955d xfractint-20.2.05.ebuild 1313
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 6129fb296ab53cce2bf72bd5f32bfc80 xfractint-20.3.02.ebuild 1326
 MD5 7deefc840cfc2efa6738b056c3ae6047 xfractint-20.3.01.ebuild 1314
-MD5 63825d151d133d378f6081964b5d8e52 xfractint-20.2.04.ebuild 1067
-MD5 7d13c7923ead71e93c29ca480e84541e xfractint-20.3.00.ebuild 1441
-MD5 6e84c2fc109365d808cc5ec4f24325e8 ChangeLog 3649
+MD5 907b525a6fb7d44c981eb958de4087b9 ChangeLog 3864
 MD5 d94d306da3804e41296e1bf04c7c9cae metadata.xml 255
 MD5 c5567d70857de4263075a5518c379360 files/xfractint-20.03p00.patch 12271
-MD5 c1f2ff1036af267f3f5c84bf558e2fdb files/digest-xfractint-20.2.04 62
-MD5 ba0d0f0ca422cb9bf8cba3394a09f35c files/digest-xfractint-20.2.05 66
-MD5 5f46849c91629d8a794f209b6b0ae20c files/digest-xfractint-20.3.00 144
 MD5 77cbf948cbe69222901e61a0803ffd27 files/digest-xfractint-20.3.01 71
 MD5 a611e11d8332efc44f36aadc00af8058 files/digest-xfractint-20.3.02 134
 MD5 96bd1e33e0ca901e1922403576c26437 files/xfractint.envd 63
 MD5 82d07ede201e8702d8735435519b2fda files/xfractint-20.02p05.patch 14678
 MD5 b0cd97be52866e9cea98a9a5e38d75a9 files/xfractint-20.03p01-make.patch 875
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.2.6 (GNU/Linux)
+
+iD8DBQFBQbtwchej4aZK9/cRAihdAJ4hXR44W7f7hass68LJuaVDbYsiqQCePbyO
+l9qbNAAVr0GJ3fvFBhr39+M=
+=43wC
+-----END PGP SIGNATURE-----
