@@ -1,2 +1,0 @@
-MD5 17e800b4087ed1377ff2f71c8b8b591a xfract20.3.00.fo.tar.gz 964450
-MD5 d004de416ca3ae575e4fbd5a62e56618 xfract-fo-20.03p00-files.tar.bz2 38008
